--- a/index.html
+++ b/index.html
@@ -108,13 +108,16 @@
                 </div>
 
                 <div class="about-image animate-on-scroll">
-                    <div style="padding:177.78% 0 0 0;position:relative;">
-                        <iframe src="https://player.vimeo.com/video/1078089981?h=b8e6086bf7&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Vídeo Remar Institucional 2024"></iframe>
+                    <div style="position:relative;padding-top:177.78%;">
+                      <iframe src="https://player.vimeo.com/video/1078089981?h=b8e6086bf7&badge=0&autopause=0&player_id=0&app_id=58479"
+                        style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                        frameborder="0"
+                        allow="autoplay; fullscreen; picture-in-picture"
+                        title="Vídeo Remar Institucional 2024"
+                        allowfullscreen>
+                      </iframe>
                     </div>
-                    <script src="https://player.vimeo.com/api/player.js"></script>
-                </div>
-            </div>
-        </div>
+                  </div>                  
     </section>
 
 
