--- a/index.html
+++ b/index.html
@@ -108,18 +108,17 @@
             </div>
       
             <div class="about-image animate-on-scroll">
-              <div style="position:relative;padding-top:177.78%;">
-                <iframe src="https://player.vimeo.com/video/1078089981?h=b8e6086bf7&badge=0&autopause=0&player_id=0&app_id=58479"
-                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                  frameborder="0"
-                  allow="autoplay; fullscreen; picture-in-picture"
-                  title="Vídeo Remar Institucional 2024"
-                  allowfullscreen>
-                </iframe>
-              </div>
-            </div>
-          </div>
-        </div>
+                <div class="responsive-video">
+                  <iframe 
+                    src="https://player.vimeo.com/video/1078089981?h=b8e6086bf7&badge=0&autopause=0&player_id=0&app_id=58479"
+                    frameborder="0"
+                    allow="autoplay; fullscreen; picture-in-picture"
+                    allowfullscreen
+                    title="Vídeo Remar Institucional 2024"
+                    class="vertical-video">
+                  </iframe>
+                </div>
+              </div>              
       </section>      
 
 
