Fix responsividade do iframe vertical do vídeo institucional

--- a/index.html
+++ b/index.html
@@ -108,17 +108,15 @@
             </div>
       
             <div class="about-image animate-on-scroll">
-                <div class="responsive-video">
-                  <iframe 
-                    src="https://player.vimeo.com/video/1078089981?h=b8e6086bf7&badge=0&autopause=0&player_id=0&app_id=58479"
-                    frameborder="0"
-                    allow="autoplay; fullscreen; picture-in-picture"
-                    allowfullscreen
-                    title="Vídeo Remar Institucional 2024"
-                    class="vertical-video">
-                  </iframe>
-                </div>
-              </div>              
+                <iframe 
+                  src="https://player.vimeo.com/video/1078089981?h=b8e6086bf7&badge=0&autopause=0&player_id=0&app_id=58479"
+                  frameborder="0"
+                  allow="autoplay; fullscreen; picture-in-picture"
+                  allowfullscreen
+                  title="Vídeo Remar Institucional 2024"
+                  style="width: 100%; max-width: 360px; height: 640px; border-radius: 12px; box-shadow: 0 10px 20px rgba(0,0,0,0.1); margin: 0 auto; display: block;">
+                </iframe>
+              </div>
       </section>      
 
 
