Atualização do site

--- a/forms.html
+++ b/forms.html
@@ -328,3 +328,11 @@
         </form>
     </div>
 </div>
+// Abertura e fechamento do calendário
+document.getElementById('open-calendar').addEventListener('click', function () {
+  document.getElementById('calendar-overlay').style.display = 'flex';
+});
+
+document.getElementById('close-calendar').addEventListener('click', function () {
+  document.getElementById('calendar-overlay').style.display = 'none';
+});
