Centralizado o texto da seção 'Quando e Onde'

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             
             <div class="section-info animate-on-scroll" style="text-align: center; margin-top: 3rem;">
                 <h3>Quando e Onde</h3>
-                <p style="text-align: justify;">As atividades acontecem às quartas-feiras pela manhã (7h às 9h) na Beira Mar de Fortaleza, em sistema de rodízio entre escolas parceiras.</p>
+                <p style="text-align: center;">As atividades acontecem às quartas-feiras pela manhã (7h às 9h) na Beira Mar de Fortaleza, em sistema de rodízio entre escolas parceiras.</p>
                 <div style="text-align: center; margin-top: 2rem;">
                     <button id="open-calendar" class="btn btn-primary">📅 Calendário Remar</button>
                   </div>
