Atualização no site - nova seção de história flutuante

--- a/index.html
+++ b/index.html
@@ -1040,32 +1040,46 @@
       });
     });
   </script>
-<div id="history-overlay" class="form-overlay" style="display: none;">
-    <div class="form-container" style="max-height: 90vh; overflow-y: auto;">
-      <button id="close-history" class="form-close" aria-label="Fechar">×</button>
+<div class="form-overlay" id="history-overlay" style="display: none;">
+    <div class="form-container">
+      <button class="form-close" id="close-history" aria-label="Fechar história">×</button>
       <h2 class="form-title">A História do Projeto Remar</h2>
-      <div class="calendar-content">
-        <p><strong>Capítulo 1: Raízes e Conexões</strong><br>
-        O Projeto Remar nasce da interseção entre esporte, inclusão e conexão humana. Thiago Camargo, paranaense de nascimento e formado em Fisioterapia em Campo Grande - MS, viveu por seis anos em Dallas, Texas, onde se apaixonou por dois mundos que moldariam seu futuro: a discotecagem e o kitesurf. De volta ao Brasil, em 2008, percorreu o país até fincar raízes em Fortaleza-CE no ano seguinte, atraído pelos ventos constantes e o sol da costa cearense.
-        Na capital cearense, fundou a escola "30 Knots", oferecendo aulas de kitesurf e, posteriormente, de surf. A escola estabeleceu parceria com a chegada do wakeboard na Lagoa do Colosso, inicialmente com lancha e depois com sistema de cabos. Thiago assumiu a coordenação de esportes do espaço e, com a chegada de pranchas de Stand Up Paddle (SUP), transformaram a lagoa em um verdadeiro polo de esportes aquáticos.</p>
+      <div class="calendar-content" style="text-align: justify; line-height: 1.8;">
+        <p><strong>Capítulo 1: Raízes e Conexões</strong></p>
+        <p>
+          O Projeto Remar nasce da interseção entre esporte, inclusão e conexão humana. Thiago Camargo, paranaense de nascimento e formado em Fisioterapia em Campo Grande - MS, viveu por seis anos em Dallas, Texas, onde se apaixonou por dois mundos que moldariam seu futuro: a discotecagem e o kitesurf.
+        </p>
+        <p>
+          De volta ao Brasil, em 2008, percorreu o país até fincar raízes em Fortaleza-CE no ano seguinte, atraído pelos ventos constantes e o sol da costa cearense. Na capital cearense, fundou a escola "30 Knots", oferecendo aulas de kitesurf e, posteriormente, de surf. A escola estabeleceu parceria com a chegada do wakeboard na Lagoa do Colosso, inicialmente com lancha e depois com sistema de cabos. Thiago assumiu a coordenação de esportes do espaço e, com a chegada de pranchas de Stand Up Paddle (SUP), transformaram a lagoa em um verdadeiro polo de esportes aquáticos.
+        </p>
   
-        <p><strong>Capítulo 2: Encontros Transformadores</strong><br>
-        Foi nesse contexto que surgiram os primeiros sinais do que se tornaria o Projeto Remar. O convite feito por Thiago ao vizinho Matheus, um jovem com síndrome de Down, para experimentar o SUP, somou-se à presença de Thiago Correia — atleta amputado que retornava ao esporte com uma prótese — e gerou um movimento genuíno de inclusão. Ambos participaram gratuitamente das aulas, revelando o poder transformador do esporte adaptado.
-        Em busca de tornar essa experiência acessível a mais pessoas, Thiago chegou até Vicente Cristino — professor universitário, mestre em Educação Especial e referência em atividades físicas adaptadas. Com uma trajetória de mais de 30 anos dedicada à inclusão, Vicente é formado pela UNIFOR, especialista em áreas como Educação Física Adaptada, Psicomotricidade e orientação e mobilidade, e atua em instituições como a Estácio, a Sociedade de Assistência aos Cegos e a Associação dos Deficientes Motores do Ceará. Sua prática pedagógica promove a adaptação de espaços físicos e o acesso de pessoas com deficiência ao esporte.
-        Após encontros iniciais, Vicente e Thiago selaram uma parceria. Vicente levou para a lagoa estudantes, voluntários e familiares de pessoas com deficiência. Essa ação conjunta deu origem ao Projeto Remar, que começava a ganhar forma com atividades estruturadas e abordagem pedagógica focada na reabilitação, inclusão e qualidade de vida.</p>
+        <p><strong>Capítulo 2: Encontros Transformadores</strong></p>
+        <p>
+          Foi nesse contexto que surgiram os primeiros sinais do que se tornaria o Projeto Remar. O convite feito por Thiago ao vizinho Matheus, um jovem com síndrome de Down, para experimentar o SUP, somou-se à presença de Thiago Correia — atleta amputado que retornava ao esporte com uma prótese — e gerou um movimento genuíno de inclusão.
+        </p>
+        <p>
+          Em busca de tornar essa experiência acessível a mais pessoas, Thiago chegou até Vicente Cristino — professor universitário, mestre em Educação Especial e referência em atividades físicas adaptadas. Após encontros iniciais, Vicente e Thiago selaram uma parceria. Vicente levou para a lagoa estudantes, voluntários e familiares de pessoas com deficiência. Essa ação conjunta deu origem ao Projeto Remar, que começava a ganhar forma com atividades estruturadas e abordagem pedagógica focada na reabilitação, inclusão e qualidade de vida.
+        </p>
   
-        <p><strong>Capítulo 3: Do Espelho d’Água à Imensidão do Mar</strong><br>
-        Outro personagem essencial nessa história é Paulo Marcelo, conhecido como PM. Respeitado na comunidade esportiva de Fortaleza, PM é atleta de modalidades como SUP, kitesurf, wing foil e surf. Com uma trajetória marcada por títulos e prestígio, ele iniciou sua atuação voluntária ainda na Lagoa, por volta de 2017.
-        Foi PM quem simbolizou a transição do projeto da lagoa para o mar aberto. Após a pandemia da COVID-19, quando muitas atividades foram interrompidas, ele foi uma peça-chave para que o Projeto Remar retomasse suas atividades, agora em águas abertas na região da Beira Mar. Sua coragem, experiência e dedicação permitiram uma nova etapa do projeto, oferecendo segurança e motivação aos novos participantes e voluntários.</p>
+        <p><strong>Capítulo 3: Do Espelho d’Água à Imensidão do Mar</strong></p>
+        <p>
+          Outro personagem essencial nessa história é Paulo Marcelo, conhecido como PM. Respeitado na comunidade esportiva de Fortaleza, PM é atleta de modalidades como SUP, kitesurf, wing foil e surf. Foi PM quem simbolizou a transição do projeto da lagoa para o mar aberto. Após a pandemia da COVID-19, ele foi uma peça-chave para que o Projeto Remar retomasse suas atividades, agora em águas abertas na região da Beira Mar.
+        </p>
   
-        <p><strong>Capítulo 4: Uma Construção Coletiva</strong><br>
-        Hoje, o Projeto Remar é muito mais do que a soma das ações de Thiago, Vicente e Paulo Marcelo. É uma rede de pessoas, escolas parceiras, voluntários, famílias e participantes que, juntos, constroem um movimento de amor, inclusão e superação.
-        Um destaque essencial vai para as escolas de canoagem que acolheram o projeto com generosidade e compromisso: Ceará SUP Club, Kayakeria, Vibe Va'a e mais recentemente a escola Elione Sousa. Essas instituições não apenas oferecem gratuitamente todo o material necessário para a prática esportiva, mas também disponibilizam seus instrutores para acompanhar os participantes, garantindo segurança, qualidade e acolhimento em cada remada.
-        Toda quarta-feira pela manhã, na Beira Mar de Fortaleza, o mar testemunha remadas cheias de propósito, sorrisos, reencontros e histórias de superação. A cada novo ciclo de atividades, o Remar reafirma sua missão de promover inclusão social por meio do esporte, abraçando a diversidade e valorizando o potencial de cada ser humano.
-        E assim, com o apoio da comunidade, das escolas de canoagem e da energia de quem acredita na transformação, essa história continua sendo escrita — em cada gota de água, em cada remada, em cada coração tocado pelo Projeto Remar.</p>
+        <p><strong>Capítulo 4: Uma Construção Coletiva</strong></p>
+        <p>
+          Hoje, o Projeto Remar é muito mais do que a soma das ações de Thiago, Vicente e Paulo Marcelo. É uma rede de pessoas, escolas parceiras, voluntários, famílias e participantes que, juntos, constroem um movimento de amor, inclusão e superação.
+        </p>
+        <p>
+          Um destaque essencial vai para as escolas de canoagem que acolheram o projeto com generosidade e compromisso: Ceará SUP Club, Kayakeria, Vibe Va'a e a escola Elione Sousa. Essas instituições oferecem gratuitamente todo o material necessário para a prática esportiva e disponibilizam seus instrutores, garantindo segurança, qualidade e acolhimento em cada remada.
+        </p>
+        <p>
+          Toda quarta-feira pela manhã, na Beira Mar de Fortaleza, o mar testemunha remadas cheias de propósito, sorrisos, reencontros e histórias de superação. A cada novo ciclo de atividades, o Remar reafirma sua missão de promover inclusão social por meio do esporte.
+        </p>
       </div>
     </div>
   </div>
+  
 
 </body>
 </html>
