Ajuste no texto da história: espaçamento entre parágrafos e capítulos

--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,8 @@
       <div class="calendar-content" style="text-align: justify; line-height: 1.8;">
         <p><h3 style="margin-top: 2rem;">Capítulo 1: Raízes e Conexões</h3></p>
         <p>
-          O Projeto Remar nasce da interseção entre esporte, inclusão e conexão humana. Thiago Camargo, paranaense de nascimento e formado em Fisioterapia em Campo Grande - MS, viveu por seis anos em Dallas, Texas, onde se apaixonou por dois mundos que moldariam seu futuro: a discotecagem e o kitesurf.
+            O Projeto Remar nasce da interseção entre esporte, inclusão e conexão humana. Thiago Camargo, paranaense de nascimento e formado em Fisioterapia em Campo Grande - MS, viveu por seis anos em Dallas, Texas, onde se apaixonou por dois mundos que moldariam seu futuro: a discotecagem e o kitesurf. De volta ao Brasil, em 2008, percorreu o país até fincar raízes em Fortaleza-CE no ano seguinte, atraído pelos ventos constantes e o sol da costa cearense.
+            Na capital cearense, fundou a escola "30 Knots", oferecendo aulas de kitesurf e, posteriormente, de surf. A escola estabeleceu parceria com a chegada do wakeboard na Lagoa do Colosso, inicialmente com lancha e depois com sistema de cabos. Thiago assumiu a coordenação de esportes do espaço e, com a chegada de pranchas de Stand Up Paddle (SUP), transformaram a lagoa em um verdadeiro polo de esportes aquáticos.
         </p>
         <p>
           De volta ao Brasil, em 2008, percorreu o país até fincar raízes em Fortaleza-CE no ano seguinte, atraído pelos ventos constantes e o sol da costa cearense. Na capital cearense, fundou a escola "30 Knots", oferecendo aulas de kitesurf e, posteriormente, de surf. A escola estabeleceu parceria com a chegada do wakeboard na Lagoa do Colosso, inicialmente com lancha e depois com sistema de cabos. Thiago assumiu a coordenação de esportes do espaço e, com a chegada de pranchas de Stand Up Paddle (SUP), transformaram a lagoa em um verdadeiro polo de esportes aquáticos.
