--- a/index.html
+++ b/index.html
@@ -1047,8 +1047,7 @@
       <div class="calendar-content" style="text-align: justify; line-height: 1.8;">
         <p><h3 style="margin-top: 2rem;">Capítulo 1: Raízes e Conexões</h3></p>
         <p>
-            O Projeto Remar nasce da interseção entre esporte, inclusão e conexão humana. Thiago Camargo, paranaense de nascimento e formado em Fisioterapia em Campo Grande - MS, viveu por seis anos em Dallas, Texas, onde se apaixonou por dois mundos que moldariam seu futuro: a discotecagem e o kitesurf. De volta ao Brasil, em 2008, percorreu o país até fincar raízes em Fortaleza-CE no ano seguinte, atraído pelos ventos constantes e o sol da costa cearense.
-            Na capital cearense, fundou a escola "30 Knots", oferecendo aulas de kitesurf e, posteriormente, de surf. A escola estabeleceu parceria com a chegada do wakeboard na Lagoa do Colosso, inicialmente com lancha e depois com sistema de cabos. Thiago assumiu a coordenação de esportes do espaço e, com a chegada de pranchas de Stand Up Paddle (SUP), transformaram a lagoa em um verdadeiro polo de esportes aquáticos.
+            O Projeto Remar nasce da interseção entre esporte, inclusão e conexão humana. Thiago Camargo, paranaense de nascimento e formado em Fisioterapia em Campo Grande - MS, viveu por seis anos em Dallas, Texas, onde se apaixonou por dois mundos que moldariam seu futuro: a discotecagem e o kitesurf.
         </p>
         <p>
           De volta ao Brasil, em 2008, percorreu o país até fincar raízes em Fortaleza-CE no ano seguinte, atraído pelos ventos constantes e o sol da costa cearense. Na capital cearense, fundou a escola "30 Knots", oferecendo aulas de kitesurf e, posteriormente, de surf. A escola estabeleceu parceria com a chegada do wakeboard na Lagoa do Colosso, inicialmente com lancha e depois com sistema de cabos. Thiago assumiu a coordenação de esportes do espaço e, com a chegada de pranchas de Stand Up Paddle (SUP), transformaram a lagoa em um verdadeiro polo de esportes aquáticos.
@@ -1056,12 +1055,14 @@
   
         <p><h3 style="margin-top: 2rem;">Capítulo 2: Encontros Transformadores</h3></p>
         <p>
-          Foi nesse contexto que surgiram os primeiros sinais do que se tornaria o Projeto Remar. O convite feito por Thiago ao vizinho Matheus, um jovem com síndrome de Down, para experimentar o SUP, somou-se à presença de Thiago Correia — atleta amputado que retornava ao esporte com uma prótese — e gerou um movimento genuíno de inclusão.
+            Foi nesse contexto que surgiram os primeiros sinais do que se tornaria o Projeto Remar. O convite feito por Thiago ao vizinho Matheus, um jovem com síndrome de Down, para experimentar o SUP, somou-se à presença de Thiago Correia — atleta amputado que retornava ao esporte com uma prótese — e gerou um movimento genuíno de inclusão. Ambos participaram gratuitamente das aulas, revelando o poder transformador do esporte adaptado.
         </p>
         <p>
-          Em busca de tornar essa experiência acessível a mais pessoas, Thiago chegou até Vicente Cristino — professor universitário, mestre em Educação Especial e referência em atividades físicas adaptadas. Após encontros iniciais, Vicente e Thiago selaram uma parceria. Vicente levou para a lagoa estudantes, voluntários e familiares de pessoas com deficiência. Essa ação conjunta deu origem ao Projeto Remar, que começava a ganhar forma com atividades estruturadas e abordagem pedagógica focada na reabilitação, inclusão e qualidade de vida.
+            Em busca de tornar essa experiência acessível a mais pessoas, Thiago chegou até Vicente Cristino — professor universitário, mestre em Educação Especial e referência em atividades físicas adaptadas. Com uma trajetória de mais de 30 anos dedicada à inclusão, Vicente é formado pela UNIFOR, especialista em áreas como Educação Física Adaptada, Psicomotricidade e orientação e mobilidade, e atua em instituições como a Estácio, a Sociedade de Assistência aos Cegos e a Associação dos Deficientes Motores do Ceará. Sua prática pedagógica promove a adaptação de espaços físicos e o acesso de pessoas com deficiência ao esporte.
         </p>
-  
+        <p>
+            Após encontros iniciais, Vicente e Thiago selaram uma parceria. Vicente levou para a lagoa estudantes, voluntários e familiares de pessoas com deficiência. Essa ação conjunta deu origem ao Projeto Remar, que começava a ganhar forma com atividades estruturadas e abordagem pedagógica focada na reabilitação, inclusão e qualidade de vida.
+            </p>
         <p><h3 style="margin-top: 2rem;">Capítulo 3: Do Espelho d’Água à Imensidão do Mar</h3></p>
         <p>
           Outro personagem essencial nessa história é Paulo Marcelo, conhecido como PM. Respeitado na comunidade esportiva de Fortaleza, PM é atleta de modalidades como SUP, kitesurf, wing foil e surf. Foi PM quem simbolizou a transição do projeto da lagoa para o mar aberto. Após a pandemia da COVID-19, ele foi uma peça-chave para que o Projeto Remar retomasse suas atividades, agora em águas abertas na região da Beira Mar.
