Ajuste no texto da história: espaçamento entre parágrafos e capítulos

--- a/index.html
+++ b/index.html
@@ -1065,19 +1065,24 @@
             </p>
         <p><h3 style="margin-top: 2rem;">Capítulo 3: Do Espelho d’Água à Imensidão do Mar</h3></p>
         <p>
-          Outro personagem essencial nessa história é Paulo Marcelo, conhecido como PM. Respeitado na comunidade esportiva de Fortaleza, PM é atleta de modalidades como SUP, kitesurf, wing foil e surf. Foi PM quem simbolizou a transição do projeto da lagoa para o mar aberto. Após a pandemia da COVID-19, ele foi uma peça-chave para que o Projeto Remar retomasse suas atividades, agora em águas abertas na região da Beira Mar.
+            Outro personagem essencial nessa história é Paulo Marcelo, conhecido como PM. Respeitado na comunidade esportiva de Fortaleza, PM é atleta de modalidades como SUP, kitesurf, wing foil e surf. Com uma trajetória marcada por títulos e prestígio, ele iniciou sua atuação voluntária ainda na Lagoa, por volta de 2017.
         </p>
-  
+    </p>
+    Foi PM quem simbolizou a transição do projeto da lagoa para o mar aberto. Após a pandemia da COVID-19, quando muitas atividades foram interrompidas, ele foi uma peça-chave para que o Projeto Remar retomasse suas atividades, agora em águas abertas na região da Beira Mar. Sua coragem, experiência e dedicação permitiram uma nova etapa do projeto, oferecendo segurança e motivação aos novos participantes e voluntários.
+</p>
+
         <p><h3 style="margin-top: 2rem;">Capítulo 4: Uma Construção Coletiva</h3></p>
         <p>
-          Hoje, o Projeto Remar é muito mais do que a soma das ações de Thiago, Vicente e Paulo Marcelo. É uma rede de pessoas, escolas parceiras, voluntários, famílias e participantes que, juntos, constroem um movimento de amor, inclusão e superação.
+            Hoje, o Projeto Remar é muito mais do que a soma das ações de Thiago, Vicente e Paulo Marcelo. É uma rede de pessoas, escolas parceiras, voluntários, famílias e participantes que, juntos, constroem um movimento de amor, inclusão e superação.
         </p>
         <p>
-          Um destaque essencial vai para as escolas de canoagem que acolheram o projeto com generosidade e compromisso: Ceará SUP Club, Kayakeria, Vibe Va'a e a escola Elione Sousa. Essas instituições oferecem gratuitamente todo o material necessário para a prática esportiva e disponibilizam seus instrutores, garantindo segurança, qualidade e acolhimento em cada remada.
+            Um destaque essencial vai para as escolas de canoagem que acolheram o projeto com generosidade e compromisso: Ceará SUP Club, Kayakeria, Vibe Va'a e mais recentemente a escola Elione Sousa. Essas instituições não apenas oferecem gratuitamente todo o material necessário para a prática esportiva, mas também disponibilizam seus instrutores para acompanhar os participantes, garantindo segurança, qualidade e acolhimento em cada remada.
         </p>
         <p>
-          Toda quarta-feira pela manhã, na Beira Mar de Fortaleza, o mar testemunha remadas cheias de propósito, sorrisos, reencontros e histórias de superação. A cada novo ciclo de atividades, o Remar reafirma sua missão de promover inclusão social por meio do esporte.
+            Toda quarta-feira pela manhã, na Beira Mar de Fortaleza, o mar testemunha remadas cheias de propósito, sorrisos, reencontros e histórias de superação. A cada novo ciclo de atividades, o Remar reafirma sua missão de promover inclusão social por meio do esporte, abraçando a diversidade e valorizando o potencial de cada ser humano.
         </p>
+        E assim, com o apoio da comunidade, das escolas de canoagem e da energia de quem acredita na transformação, essa história continua sendo escrita — em cada gota de água, em cada remada, em cada coração tocado pelo Projeto Remar.
+    </p>
       </div>
     </div>
   </div>
