Adicionado efeito hover com sombra nos títulos da seção Sobre

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
             </p>
         <p><h3 style="margin-top: 2rem;">Capítulo 3: Do Espelho d’Água à Imensidão do Mar</h3></p>
         <p>
-            Outro personagem essencial nessa história é Paulo Marcelo, conhecido como PM. Respeitado na comunidade esportiva de Fortaleza, PM é atleta de modalidades como SUP, kitesurf, wing foil e surf. Com uma trajetória marcada por títulos e prestígio, ele iniciou sua atuação voluntária ainda na Lagoa, por volta de 2017.
+            Outro personagem essencial nessa história é Paulo Marcelo, conhecido como PM. Respeitado na comunidade esportiva de Fortaleza, PM é atleta de modalidades como SUP, kitesurf, wing foil e surf. Com uma trajetória marcada por títulos e prestígio, ele iniciou sua atuação voluntária ainda na Lagoa, desde de 2015.
         </p>
     </p>
     Foi PM quem simbolizou a transição do projeto da lagoa para o mar aberto. Após a pandemia da COVID-19, quando muitas atividades foram interrompidas, ele foi uma peça-chave para que o Projeto Remar retomasse suas atividades, agora em águas abertas na região da Beira Mar. Sua coragem, experiência e dedicação permitiram uma nova etapa do projeto, oferecendo segurança e motivação aos novos participantes e voluntários.
