Ajuste nos efeitos de hover para títulos específicos

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       
           <div class="about-content">
             <div class="about-text animate-on-scroll">
-                <h2 id="open-history" class="hover-effect">Nossa História</h2>
+                <h3 id="open-history" class="text-shadow-hover">Nossa História</h3>
               <p style="text-align: justify;">O Projeto Remar nasceu em 2013 na Lagoa do Colosso, em Fortaleza‑CE, com o objetivo de oferecer atividades aquáticas adaptadas a pessoas com deficiência. Em 2020, o projeto ampliou suas atividades para a região da Beira Mar, expandindo suas ações para o mar, onde permanece ativo até hoje.</p>
       
               <h3 class="text-shadow-hover">Nossa Missão</h3>
