Inserção dos overlays para Nossa Missão e Nossos Valores

--- a/index.html
+++ b/index.html
@@ -1079,6 +1079,41 @@
     </div>
   </div>
   
+  <div class="form-overlay" id="mission-overlay" style="display: none;">
+    <div class="form-container">
+      <button class="form-close" id="close-mission" aria-label="Fechar missão">×</button>
+      <h2 class="form-title">Nossa Missão</h2>
+      <div class="calendar-content" style="text-align: justify; line-height: 1.8;">
+        <p>Promover inclusão social, saúde e qualidade de vida para pessoas com deficiência por meio de atividades aquáticas adaptadas, acessíveis e realizadas em contato com a natureza.</p>
+        <p>Acreditamos que o esporte tem o poder de transformar vidas, quebrar barreiras e fortalecer laços. Nosso compromisso é oferecer, de forma segura e acolhedora, experiências que estimulem o desenvolvimento físico, emocional e social de cada participante.</p>
+        <p>Por meio da união entre voluntários, famílias, profissionais e escolas parceiras, buscamos construir um ambiente onde o respeito à diversidade, a empatia e a superação caminham lado a lado — remando juntos em direção a uma sociedade mais inclusiva.</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="form-overlay" id="values-overlay" style="display: none;">
+    <div class="form-container">
+      <button class="form-close" id="close-values" aria-label="Fechar valores">×</button>
+      <h2 class="form-title">Nossos Valores</h2>
+      <div class="calendar-content" style="text-align: justify; line-height: 1.8;">
+        <p><strong>🟦 Inclusão</strong><br>
+        Acreditamos que todas as pessoas têm o direito de viver experiências significativas, independentemente de suas limitações. Trabalhamos para criar espaços verdadeiramente acessíveis, onde cada indivíduo se sinta pertencente.</p>
+  
+        <p><strong>🟨 Respeito à Diversidade</strong><br>
+        Valorizamos as diferenças como parte essencial da convivência. Cada participante, voluntário e parceiro é acolhido com empatia, escuta ativa e sensibilidade às suas histórias e vivências.</p>
+  
+        <p><strong>🟧 Coletividade e Cooperação</strong><br>
+        Nosso trabalho é coletivo. A força do Remar está na união de mãos, braços e corações que se colocam à disposição do outro. Juntos, vamos mais longe e com mais propósito.</p>
+  
+        <p><strong>🟩 Transformação pelo Esporte</strong><br>
+        Vemos no esporte adaptado uma ferramenta poderosa de reabilitação, autoestima, autonomia e socialização. A água é nossa aliada na construção de confiança e superação.</p>
+  
+        <p><strong>🟫 Gratidão e Comprometimento</strong><br>
+        Somos gratos aos voluntários, famílias, escolas parceiras e à comunidade que torna o Remar possível. Cada remada é fruto de dedicação e compromisso com um mundo mais justo e acessível.</p>
+      </div>
+    </div>
+  </div>
+  
 
 </body>
 </html>
