Atualização no index após reorganização de pastas

--- a/index.html
+++ b/index.html
@@ -801,14 +801,14 @@
       
               <div class="form-row">
                 <div class="form-group">
-                  <label>Participa de outras atividades terapêuticas?</label>
+                  <label>Participa de atividades terapêuticas?</label>
                   <div class="form-check">
                     <label><input type="checkbox" value="fisioterapia"> Fisioterapia</label>
                     <label><input type="checkbox" value="fono"> Fonoaudiologia</label>
                     <label><input type="checkbox" value="to"> Terapia Ocupacional</label>
-                    <label><input type="checkbox" value="outros"> Outros</label>
+                    
                   </div>
-                  <input type="text" class="form-control" placeholder="Se outros, especificar">
+                  <input type="text" class="form-control" placeholder="Outras atividades, especificar">
                 </div>
               </div>
             </div>
