Corrigindo bugs e atualizando o site

--- a/forms.html
+++ b/forms.html
@@ -328,11 +328,14 @@
         </form>
     </div>
 </div>
-// Abertura e fechamento do calendário
-document.getElementById('open-calendar').addEventListener('click', function () {
-  document.getElementById('calendar-overlay').style.display = 'flex';
-});
-
-document.getElementById('close-calendar').addEventListener('click', function () {
-  document.getElementById('calendar-overlay').style.display = 'none';
-});
+<script>
+    // Abertura e fechamento do calendário
+    document.getElementById('open-calendar').addEventListener('click', function () {
+      document.getElementById('calendar-overlay').style.display = 'flex';
+    });
+    
+    document.getElementById('close-calendar').addEventListener('click', function () {
+      document.getElementById('calendar-overlay').style.display = 'none';
+    });
+    </script>
+    
