Atualização no forms.js: envio de arquivos anexados ao Google Drive

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                     
                     <div class="form-group">
                         <label for="volunteer-rg" class="required-field">RG</label>
-                        <input type="text" id="volunteer-rg" class="form-control" required>
+                        <input type="text" id="rg" name="rg">
                         <div id="volunteer-rg-error" class="form-error"></div>
                     </div>
                 </div>
@@ -905,7 +905,7 @@
                     
                     <div class="form-group">
                         <label for="volunteer-email" class="required-field">E-mail</label>
-                        <input type="email" id="volunteer-email" class="form-control" placeholder="exemplo@email.com" required>
+                        <input type="email" id="email" name="email" placeholder="exemplo@email.com">
                         <div id="volunteer-email-error" class="form-error"></div>
                     </div>
                 </div>
@@ -972,7 +972,7 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="volunteer-motivation" class="required-field">Motivação</label>
-                        <textarea id="volunteer-motivation" class="form-control" rows="3" placeholder="Por que você deseja ser voluntário no Projeto Remar?" required></textarea>
+                        <textarea id="volunteer-motivation" class="form-control" rows="3" placeholder="Por que você deseja ser voluntário no Projeto Remar?" ></textarea>
                         <div id="volunteer-motivation-error" class="form-error"></div>
                     </div>
                 </div>
