--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
       
               <div class="form-row">
                 <div class="form-group">
-                  <label class="required-field">Utiliza:</label>
+                  <label>Utiliza:</label>
                   <div class="form-check">
                     <label><input type="checkbox" value="prótese"> Prótese</label>
                     <label><input type="checkbox" value="órtese"> Órtese</label>
@@ -991,7 +991,7 @@
                     <div class="form-group">
                         <div class="form-check">
                             <input type="checkbox" id="volunteer-term" required>
-                            <label for="volunteer-term" class="required-field">Declaro que li e concordo com os termos de voluntariado e estou ciente das responsabilidades envolvidas.</label>
+                            <label for="volunteer-term" class="required-field" style="text-align: justify;">Declaro estar ciente dos riscos envolvidos nas atividades aquáticas do Projeto Remar. Comprometo-me a seguir as orientações da equipe, utilizar corretamente os equipamentos fornecidos e zelar pela segurança e bem-estar dos participantes. Reconheço que minha atuação é voluntária, sem vínculo empregatício ou remuneração.</label>
                             <div id="volunteer-term-error" class="form-error"></div>
                         </div>
                     </div>
@@ -1001,7 +1001,7 @@
                     <div class="form-group">
                         <div class="form-check">
                             <input type="checkbox" id="volunteer-image-authorization" required>
-                            <label for="volunteer-image-authorization" class="required-field">Autorizo o uso de minha imagem em fotos e vídeos para divulgação do Projeto Remar em suas redes sociais e materiais institucionais.</label>
+                            <label for="volunteer-image-authorization" class="required-field" style="text-align: justify;">Autorizo gratuitamente, por prazo indeterminado, o uso da minha imagem registrada nas atividades do Projeto Remar, para divulgação institucional em redes sociais, mídias e materiais promocionais, respeitando sempre minha dignidade e o contexto original das imagens.</label>
                             <div id="volunteer-image-authorization-error" class="form-error"></div>
                         </div>
                     </div>
